UtahLiveDataTest/src/objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>HideSecondGMFields__c</fullName>
        <formula>IF(
  IF(
    MONTH(BudgetPeriodStartDate__c) &gt; 9,
    AND(
      BudgetPeriodStartDate__c &lt; DATE(YEAR(BudgetPeriodEndDate__c), 9, 30), 
      BudgetPeriodEndDate__c &gt; DATE(YEAR(BudgetPeriodEndDate__c), 9, 30)
    ),
    AND(
      BudgetPeriodStartDate__c &lt; DATE(YEAR(BudgetPeriodStartDate__c), 9, 30), 
      BudgetPeriodEndDate__c &gt; DATE(YEAR(BudgetPeriodStartDate__c), 9, 30)
    )
  ),
  false, 
  true
)</formula>
        <label>Hide Second GM Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSendToOGM__c</fullName>
        <formula>OR(
  NOT(ISPICKVAL(Status__c, &apos;Accepted by Sub-Awardee&apos;)),
  $User.Id != GrantSupervisor__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Send To OGM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideStaticText__c</fullName>
        <formula>NOT(ISPICKVAL(WaiveAllocationStatus__c ,&apos;Sent For Internal Approval&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideStaticText</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubAwardeeApproval__c</fullName>
        <formula>OR(NOT(ISPICKVAL(Status__c, &apos;Sent to Grantee Review&apos;)), TEXT( $User.UserType ) = &apos;Standard&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Sub-Awardee Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmitRevisionToGrantor__c</fullName>
        <formula>IF(
AND(GrantorOrganization__c = &apos;USBE&apos;, 
TEXT(BudgetRevisionInitiated__c) != null, TEXT(BudgetRevisionInitiated__c) = &apos;Submitted&apos;, CurrentRevisionStatus__c = &apos;Approved Internally&apos;,  ApprovedInternally__c = true 
)
, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSubmitRevisionToGrantor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmit__c</fullName>
        <formula>OR(
  NOT(ISPICKVAL(Status__c, &apos;Drafted&apos;)), 
  $User.Id != ProgramManager__c,
  NOT(HasApproval__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUSBE__c</fullName>
        <formula>IF(GrantorOrganization__c == &apos;USBE&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUSBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDCRIssueDate__c</fullName>
        <label>IDCR Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InKindRollUp__c</fullName>
        <label>InKindRollUp</label>
        <summarizedField>AwardBudgetCategory__c.InKind__c</summarizedField>
        <summaryForeignKey>AwardBudgetCategory__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InKind__c</fullName>
        <label>InKind</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IndirectAmount__c</fullName>
        <label>Indirect Amount</label>
        <summarizedField>AwardServiceArea__c.IndirectAmount__c</summarizedField>
        <summaryForeignKey>AwardServiceArea__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IndirectCostPercentageProposed__c</fullName>
        <label>IndirectCostPercentageProposed</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IndirectCostPercentage__c</fullName>
        <label>IndirectCostPercentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IndirectCostRateDecision__c</fullName>
        <label>Indirect Cost Rate Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implicit</fullName>
                </value>
                <value>
                    <fullName>Explicit</fullName>
                    <default>true</default>
                    <label>Explicit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalOrgAddress__c</fullName>
        <description>Used for USBE award letter</description>
        <formula>Grant__r.InternalOrganization__r.BillingStreet &amp; BR() 
&amp;Grant__r.InternalOrganization__r.BillingCity&amp;&quot;, &quot;&amp;Grant__r.InternalOrganization__r.BillingState 
&amp;&quot; &quot;&amp;Grant__r.InternalOrganization__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InternalOrgAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsAwardApprover2__c</fullName>
        <formula>$User.Id = AwardApprover2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAwardApprover2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosedOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Closed Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDrafted__c</fullName>
        <formula>ISPICKVAL(Status__c, &apos;Drafted&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Drafted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFinops__c</fullName>
        <formula>$User.Id = AwardApprover1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsFinops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGM__c</fullName>
        <formula>$User.Id = GrantsManager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsGM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInApprovalProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark that the award is in the approval process</description>
        <label>IsInApprovalProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOwner__c</fullName>
        <formula>$User.Id = Grant__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecordRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag will will true if record is sent to owner</description>
        <label>IsRecordRecalled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSoleSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sole Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStateMatchRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Grantee Match Required ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStateMatchWaived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is State Match Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubAwardeeNotifiedofTermination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SubAwardee Notified of Termination?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyPOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key POC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEAComment__c</fullName>
        <label>LEA Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LEAName__c</fullName>
        <formula>Application__r.ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestAward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Latest Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>This is created to get the latitude from the demographic object</description>
        <label>Latitude</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>This is created to save the Longitude from demographic object</description>
        <label>Longitude</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSPValidateOrderNumber__c</fullName>
        <label>MSP Validate Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximumAward__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Maximum Award</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NAICSCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NAICS Code</label>
        <referenceTo>NAICSCode__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <description>ggsDemo__Grant__r.ggsDemo__Program__r.ggsDemo__Administration__c + &apos;-&apos; +  ggsDemo__Grant__r.ggsDemo__Program__r.Name+ &apos;-&apos;</description>
        <formula>IF($Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c = &apos;StateasGrantor&apos;,
&apos;AD-&apos;+Grant__r.GrantAbbreviation__c+&apos;-&apos;+BudgetPeriod__r.SupportYear__c+&apos;-&apos;,
 &apos;FAD-&apos;+ Grant__r.GrantAbbreviation__c  +&apos;-&apos;+BudgetPeriod__r.SupportYear__c +&apos;-&apos;)</formula>
        <label>NameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoOfMonthsOfBudgetPeriod__c</fullName>
        <description>This field is used to calculate the number of a months in a budget period. It is used in reports</description>
        <formula>IF( AND(
          NOT( ISBLANK(BudgetPeriod__r.BudgetStartDate__c ) ) ,
          NOT( ISBLANK(BudgetPeriod__r.BudgetEndDate__c) ) 
         ) , 
    IF( YEAR(BudgetPeriod__r.BudgetStartDate__c) =  YEAR(BudgetPeriod__r.BudgetEndDate__c)  , 
         IF( MONTH(BudgetPeriod__r.BudgetStartDate__c) =  MONTH(BudgetPeriod__r.BudgetEndDate__c), 
            1, 
            ABS (MONTH(BudgetPeriod__r.BudgetEndDate__c) -  MONTH(BudgetPeriod__r.BudgetStartDate__c))), 
         (((YEAR(BudgetPeriod__r.BudgetEndDate__c) -  YEAR(BudgetPeriod__r.BudgetStartDate__c)) *       12) - ( ABS( MONTH(BudgetPeriod__r.BudgetEndDate__c) -  MONTH(BudgetPeriod__r.BudgetStartDate__c)  )))),                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         0)</formula>
        <label>No Of Months Of Budget Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotDrafted__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c, &apos;Drafted&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Drafted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotGrantMonitor__c</fullName>
        <formula>$User.Id != GrantMonitor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Grant Monitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotGrantSupervisor__c</fullName>
        <formula>$User.Id = GrantSupervisor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Grant Supervisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotSoleSource__c</fullName>
        <formula>NOT(IsSoleSource__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Sole Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfBudgetPeriods__c</fullName>
        <label>Number of Budget Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfFundingAccounts__c</fullName>
        <label>Number of Funding Accounts</label>
        <summaryForeignKey>AwardFundingAccount__c.Award__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofFiscalContacts__c</fullName>
        <description>This Count is used in Submitting for Approval on Award</description>
        <label>Number of Fiscal Contacts</label>
        <summaryFilterItems>
            <field>GrantContact__c.Role__c</field>
            <operation>equals</operation>
            <value>Fiscal Contact</value>
        </summaryFilterItems>
        <summaryForeignKey>GrantContact__c.Award__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofOtherContacts__c</fullName>
        <description>This Count is used on Submit for Approval on Award</description>
        <label>Number of Grantor Contacts</label>
        <summaryFilterItems>
            <field>GrantContact__c.Role__c</field>
            <operation>equals</operation>
            <value>Federal/Sponsor Contact</value>
        </summaryFilterItems>
        <summaryForeignKey>GrantContact__c.Award__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofProgramContacts__c</fullName>
        <description>This count is used for Submitting Approval on Award</description>
        <label>Number of Program Contacts</label>
        <summaryFilterItems>
            <field>GrantContact__c.Role__c</field>
            <operation>equals</operation>
            <value>Program Contact</value>
        </summaryFilterItems>
        <summaryForeignKey>GrantContact__c.Award__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards88</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ObligatedAwardAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Obligated amount in this award</description>
        <label>ObligatedAwardAmount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrganizationAddress__c</fullName>
        <inlineHelpText>Auto populate field. Copy this from the application in cases of awards being created as a result of approved applications, progress reports or ammedment requests. For awards initiated by State, copy this information from the last award. Editable. Required</inlineHelpText>
        <label>Organization Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherAssistanceTypespecify__c</fullName>
        <label>If Other Assistance Type, specify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCEmail__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>POCFax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>POCFirstName__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCLastName__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCPhone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>POCPrefix__c</fullName>
        <label>Prefix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCSuffix__c</fullName>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCTitle__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POUserName__c</fullName>
        <formula>POUser__r.FirstName &amp; &apos; &apos; &amp; POUser__r.LastName</formula>
        <label>POUser Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaidAmountOnAwardLS__c</fullName>
        <label>PaidAmountOnAwardLS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PassThroughEntity__c</fullName>
        <formula>If(CONTAINS(GrantorOrganization__c, &apos;USBE&apos;),&apos;Utah State Board of Education&apos; &amp; BR()
&amp; &apos;250 East 500 South&apos; &amp; BR()
&amp; &apos;PO BOX 144200&apos; &amp; BR()
&amp; &apos;Salt Lake City, UT 84111&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Through Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AwardshKUr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentMadeWithError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Made With Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentMadeWithoutError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Made Without Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingPayment__c</fullName>
        <label>Pending Payment</label>
        <summarizedField>AwardBudgetCategory__c.TotalPendingPayment__c</summarizedField>
        <summaryForeignKey>AwardBudgetCategory__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PercentVarianceOverTen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If percent variance &gt; 10%, return true</description>
        <label>PercentVarianceOverTen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonnelDecision__c</fullName>
        <label>Personnel Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreviousAwardNumber__c</fullName>
        <label>Previous Award Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousBudgetEndDate__c</fullName>
        <label>Previous Budget End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreviousBudgetStartDate__c</fullName>
        <label>Previous Budget Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorAwardedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prior Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awardsi68y</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramBudgetTypeUSBE__c</fullName>
        <formula>TEXT(Grant__r.Program__r.ProgramBudgetTypeUSBE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProgramBudgetTypeUSBE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Code</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramComment__c</fullName>
        <label>Program Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramId__c</fullName>
        <formula>Grant__r.Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProgramId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <formula>Grant__r.Program__r.ProgramName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramNumber__c</fullName>
        <formula>Grant__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProgramNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramsContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programs Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards2_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectAmountofBudgetCategories__c</fullName>
        <label>Project Amount of Budget Categories</label>
        <summarizedField>AwardBudgetCategory__c.GrantorAmount__c</summarizedField>
        <summaryForeignKey>AwardBudgetCategory__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards3_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectManagerFirstname__c</fullName>
        <formula>Application__r.ProjectManagerFirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectManagerLastname__c</fullName>
        <formula>Application__r.ProjectManagerLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectOfficer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards22</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodEndDate__c</fullName>
        <description>Project Period End Date for the award.</description>
        <label>Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodStartDate__c</fullName>
        <description>Project Period Start Date for the award.</description>
        <label>Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStartEndDate__c</fullName>
        <formula>TEXT(ProjectPeriodStartDate__c) &amp;&quot; To &quot;&amp; TEXT(ProjectPeriodEndDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTitleFormula__c</fullName>
        <formula>Application__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTitle__c</fullName>
        <description>Title of the project.</description>
        <label>Project Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposalDescription__c</fullName>
        <label>Proposal Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProposedBudgetRevisionSum__c</fullName>
        <label>ProposedBudgetRevisionSum</label>
        <summarizedField>AwardBudgetCategory__c.ProposedBudgetRevision__c</summarizedField>
        <summaryForeignKey>AwardBudgetCategory__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProposedRevisionSumRound__c</fullName>
        <formula>ProposedBudgetRevisionSum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProposedRevisionSumRound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderNumber2__c</fullName>
        <label>Purchase Order Number FY2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseOrderNumber__c</fullName>
        <label>Purchase Order Number FY1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1DueDate__c</fullName>
        <description>An email is sent to subrecipient 1 day before this duedate through workflow process</description>
        <label>Q1DueDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q2DueDate__c</fullName>
        <label>Q2DueDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q3DueDate__c</fullName>
        <label>Q3DueDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReadGrantSupervisorFields__c</fullName>
        <formula>OR(NOT(ISPICKVAL(Status__c, &apos;Accepted by Sub-Awardee&apos;)), $User.Id != GrantSupervisor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Grant Supervisor Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyASMFields__c</fullName>
        <formula>OR(NOT(ISPICKVAL(Status__c, &apos;Accepted by Sub-Awardee&apos;)), $User.Id != GrantSupervisor__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only ASM Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyAmendment__c</fullName>
        <formula>OR(
  ReadOnly__c,
  AND( 
    NOT(ISPICKVAL(AwardType__c, &apos;New&apos;)), 
    NOT(ISPICKVAL(AwardType__c, &apos;Sole-Source&apos;)), 
    NOT(CONTAINS(Amendments__c, &apos;Continuation&apos;)) , 
    NOT(CONTAINS(Amendments__c, &apos;Award Increase/Decrease&apos;)) , 
    NOT(CONTAINS(Amendments__c, &apos;Cost-Extension&apos;)),
    NOT(CONTAINS(Amendments__c, &apos;No Cost-Extension&apos;))
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyContinuation__c</fullName>
        <formula>OR(
  ReadOnly__c,
  AND(
    NOT(ISPICKVAL(AwardType__c, &apos;New&apos;)),
    NOT(ISPICKVAL(AwardType__c, &apos;Sole-Source&apos;)),
    NOT(CONTAINS(Amendments__c, &apos;Continuation&apos;))
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only Continuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyPeriods__c</fullName>
        <formula>OR(
  ReadOnly__c,
  AND(
    NOT(ISPICKVAL(AwardType__c, &apos;New&apos;)),
    NOT(ISPICKVAL(AwardType__c, &apos;Sole-Source&apos;))
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlySubAwardee__c</fullName>
        <formula>OR(
  NOT(ISPICKVAL(Status__c, &apos;Sub-Awardee Review&apos;)),
  $User.Id != SubAwardee__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only Sub Awardee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyTerms__c</fullName>
        <formula>OR(
  NotDrafted__c,
  $User.IsExternalUser__c,
  NOT(HasApproval__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnly__c</fullName>
        <formula>OR(
  AND(
    NOT(ISPICKVAL(Status__c, &apos;Drafted&apos;))
  ),
  $User.Id != ProgramManager__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecallComment__c</fullName>
        <label>Recall Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientEmail__c</fullName>
        <formula>GranteePOC__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecipientEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingBudget__c</fullName>
        <label>Remaining Budget</label>
        <summarizedField>AwardBudgetCategory__c.RemainingBudget__c</summarizedField>
        <summaryForeignKey>AwardBudgetCategory__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RemainingObligatedAmount__c</fullName>
        <formula>TotalObligateAmount__c -( PriorAwardedAmount__c  +  AwardedAmountthisAction__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Obligated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenderApproveAwardButton__c</fullName>
        <formula>NOT(AND(OR(TEXT( Status__c) = &apos;In Progress&apos; , TEXT( Status__c) = &apos;Change Requested&apos; ) , TEXT($User.UserType) = &apos;Standard&apos;,NumberOfFundingAccounts__c &gt; 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Approve Award Button</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>